--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -1,17 +1,13 @@
 <nav th:fragment="navbarFragment"
-     class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+     class="navbar navbar-expand navbar-light bg-light border-bottom">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">김미공학인증</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
+          </li>
+        <li>
           <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
         </li>
         <li class="nav-item">
