--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,9 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
-  <!-- CSS -->
-  <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/static/css/bootstrap.min.css}">
   <title>공학인증검사</title>
 </head>
 
@@ -21,7 +19,6 @@
 <!-- File - Settings - inspections - Unbound namespace prefix 체크해제 -->
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
 <!-- Bootstrap JS -->
-<script th:src="@{/bootstrap.min.js}"></script>
 </body>
 
 </html>
